tests/fixtures/invalid/pow_int_none_float.py
# Cannot call pow() with Int, None, Float
x = pow(1, None, 1.0)
